--- a/sdl_practice/makefile
+++ b/sdl_practice/makefile
@@ -1,41 +1,2 @@
-# A simple Makefile for compiling small SDL projects
-
-# set the compiler
-CC := clang
-
-# set the compiler flags
-CFLAGS := `sdl2-config --libs --cflags` -ggdb3 -O0 --std=c99 -Wall -lSDL2_image -lm
-# add header files here
-# HDRS :=
-
-# add source files here
-SRCS := main.c
-
-# generate names of object files
-OBJS := $(SRCS:.c=.o)
-
-# name of executable
-EXEC := game
-
-# default recipe
-all: $(EXEC)
-
-showfont: showfont.c Makefile
-	$(CC) -o $(EXEC) main.c $(CFLAGS)
-
-glfont: glfont.c Makefile
-	$(CC) -o $(EXEC) main.c $(CFLAGS) $(LIBS)
-
-# recipe for building the final executable
-$(EXEC): $(OBJS) Makefile
-	$(CC) -o $(EXEC) $(OBJS) $(CFLAGS)
-
-# recipe for building object files
-#$(OBJS): $(@:.o=.c) $(HDRS) Makefile
-#    $(CC) -o $@ $(@:.o=.c) -c $(CFLAGS)
-
-# recipe to clean the workspace
-clean:
-	rm -f $(EXEC) $(OBJS)
-
-.PHONY: all clean
+all:
+	gcc -o windows windows.c -lncurses
